Crash with new eyedropper shortcut (e) #37088

Closed
opened 2013-10-15 11:36:32 +02:00 by christian krupa · 12 comments

%%%--- Operating System, Graphics card ---

OS X 10.7.5

NVIDIA GT120 + AMD 6800

- Blender version with error, and version that worked ---

SVN build r60769 is error, never had working version.

- Short description of error ---

Exit crash after pressing 'e' over a colour swatch, sometimes after clicking on an image to be sampled, sometimes just on mouse over image.

http://www.pasteall.org/46506

OS X crash report sample for this error

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

%%%

%%%--- Operating System, Graphics card --- OS X 10.7.5 NVIDIA GT120 + AMD 6800 - Blender version with error, and version that worked --- SVN build r60769 is error, never had working version. - Short description of error --- Exit crash after pressing 'e' over a colour swatch, sometimes after clicking on an image to be sampled, sometimes just on mouse over image. http://www.pasteall.org/46506 OS X crash report sample for this error - Steps for others to reproduce the error (preferably based on attached .blend file) --- %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Interestingly that crash happens in ImThread, not blender. Could not reproduce on linux, either something platform-specific or some special setup is needed.

christian, how do we reproduce the issue from the startup file?%%%

%%%Interestingly that crash happens in ImThread, not blender. Could not reproduce on linux, either something platform-specific or some special setup is needed. christian, how do we reproduce the issue from the startup file?%%%

%%%Hi Sergey, thanks for responding, did chat with ideasman this morning about it,

steps from startup.

  1. split main window and change one view to image
  2. load image into window
  3. on materials panel press 'e' over diffuse swatch
  4. either click or even just hover over image to produce crash

sebastiank reported the same in irc...

cheers fella,

ps am in irc if you need%%%

%%%Hi Sergey, thanks for responding, did chat with ideasman this morning about it, steps from startup. 1. split main window and change one view to image 2. load image into window 3. on materials panel press 'e' over diffuse swatch 4. either click or even just hover over image to produce crash sebastiank reported the same in irc... cheers fella, ps am in irc if you need%%%

%%%Are you loading an EXR image into the image window? did you check if the format used makes a difference?%%%

%%%Are you loading an EXR image into the image window? did you check if the format used makes a difference?%%%

%%%Hi Campbell

tried with exr, png and jpg, same result with each format.%%%

%%%Hi Campbell tried with exr, png and jpg, same result with each format.%%%

%%%Please check builds newer than r60865. I just fixed another bug which had the same symptoms.%%%

%%%Please check builds newer than r60865. I just fixed another bug which had the same symptoms.%%%

%%%Hi Sergey,

just tried a r60870 build to no avail, still crashed both attempting to sample from an imported image in an image window and when sampling from around the interface without an image loaded.

http://www.pasteall.org/46650

is a crash report from attempting to sample from an imported png,

sorry dude...%%%

%%%Hi Sergey, just tried a r60870 build to no avail, still crashed both attempting to sample from an imported image in an image window and when sampling from around the interface without an image loaded. http://www.pasteall.org/46650 is a crash report from attempting to sample from an imported png, sorry dude...%%%

%%%Unassigning from self since can not reproduce the issue and have no other clues about what might be causing it.%%%

%%%Unassigning from self since can not reproduce the issue and have no other clues about what might be causing it.%%%

This issue was referenced by blender/blender-addons-contrib@df060e5d21

This issue was referenced by blender/blender-addons-contrib@df060e5d21787420ebf10df35d25d61b5ff57999

This issue was referenced by df060e5d21

This issue was referenced by df060e5d21787420ebf10df35d25d61b5ff57999

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit df060e5d21.

Closed by commit df060e5d21.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37088
No description provided.