Fix T37088: Crash with eyedropper (shortcut E)